--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <div class="verified-badge">
                         <i class="fas fa-check"></i> Verificado
                     </div>
-                    <img src="imgs/samara.jpeg" alt="Samara Lima" class="caregiver-image">
+                    <img src="imgs/samara.jpeg" alt="Samara Montenegro" class="caregiver-image">
                     <div class="caregiver-info">
-                        <h2 class="caregiver-name">Samara Lima</h2>
+                        <h2 class="caregiver-name">Samara Montenegro</h2>
                         <p>Apaixonada por animais desde criança, tenho 5 anos de experiência como cuidadora
                             profissional.</p>
 
@@ -102,7 +102,7 @@
                     <div class="caregiver-info">
                         <h2 class="caregiver-name">Gabriel Tomasi</h2>
                         <p>Especialista em felinos, com certificação em primeiros socorros pet. Criador de gatos
-                            proficional</p>
+                            profissional</p>
 
                         <div class="service-details">
                             <div class="service-item">
