--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="caregiver-info">
                         <h2 class="caregiver-name">Gabriel Tomasi</h2>
                         <p>Especialista em felinos, com certificação em primeiros socorros pet. Criador de gatos
-                            profissional</p>
+                            profissional.</p>
 
                         <div class="service-details">
                             <div class="service-item">
